# ragatool

./: README.md  docker-compose.ghcr.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  ragatouille.db  requirements.txt
backend/.design-specs/: codestyle.md  structure.md  tech.md
backend/.design-specs/templates/: structure-template.md
backend/.gemini/commands/design-specs/: requirements.toml  tasks.toml
backend/.gemini/skills/implementation-planner/: SKILL.md
backend/app/: database.py  dependencies.py  main.py
backend/app/crud/: crud_collection.py  crud_files.py  crud_log.py  crud_summary.py  crud_task.py
backend/app/internal/: background_task_dispatcher.py  chunker.py  exceptions.py  extension_manager.py  graph_manager.py  mcp_manager.py  message_hub.py  settings_manager.py  simple_crawler.py  temp_file_helper.py  tools.py  utils.py
backend/app/models/: imports.py  messages.py  url_import.py
backend/app/routers/: collections.py  files.py  imports.py  items.py  logs.py  mcp.py  summaries.py  tasks.py  users.py
backend/app/schemas/: collection.py  file.py  imports.py  mcp.py  summary.py
backend/tests/: test_background_task_dispatcher.py  test_chunker.py  test_collections_api.py  test_crud_collection.py  test_crud_log.py  test_crud_summary.py  test_crud_task.py  test_extension_manager.py  test_files_api.py  test_graph_manager.py  test_imports.py  test_items.py  test_logs.py  test_main.py  test_message_hub.py  test_summaries_api.py  test_temp_file_helper.py  test_tools.py
frontend/: .gitignore  README.md  (+5 more)
(+119 files in other folders)
