[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "fastembed>=0.8.0",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface-hub>=1.11.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "neo4j>=6.1.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.44.0",
    "wordninja>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
